# saliency

./: .env.example  .gitignore  CODEX.md  README.md  pyproject.toml  ssh-debug.txt
configs/: paper1_admission_panel_v1.yaml  paper1_clean_behavioral_rerun.yaml  paper1_config.yaml  paper1_cross_axis_assembly.yaml  paper1_efficiency_resource_rerun.yaml  paper1_experiment_v1.yaml  paper1_latent_neural_matrix.yaml  paper1_latent_neural_stream_admission.yaml  paper1_matrix_v2.yaml  paper1_primary_behavioral_latent_fixation.yaml  paper1_publication_contract.yaml
docs/: Deep Research Assessment of the Human-Machine Visual Alignment Project.md  Literature Review and Research Redesign for the Human-Like Adaptive Visual Attention Project.md  Zhang_Zihuan_zzhan330_proposal.docx  actual_methodology_trace.md  hma_project_publication_critique_handoff.md  paper1_cross_axis_alignment_roadmap.md  paper1_experiment_spec_v1.md  paper1_literaturereview.md  project_results_numbers.md  project_status_and_next_steps.md  project_status_changelog.md  v2_static2000_results_note.md
scripts/: aggregate_results.py  apply_external_patches.py  assemble_paper1_clean_cross_axis.py  audit_behavioral_bridge_integration.py  audit_behavioral_controls.py  audit_free_viewing_reference_feasibility.py  audit_matched_neural_panel.py  audit_neural_reliability_metadata.py  audit_paper1_matrix_v2.py  audit_paper1_matrix_v2_pca_cache.py  audit_transformer_relevance_control.py  certify_local_publication_models.py  certify_publication_adapters.py  clean_cluster_home.py  cluster_runtime_env.sh  compare_learned_readout_smokes.py  compute_matched_geometry.py  compute_paper1_v1_subject_robustness_geometry.py  create_algonauts_manifest.py  create_attribution_family_interpretation.py  create_deepgaze_reference_configs.py  create_neural_roi500_configs.py  create_nsd_noise_ceiling_manifest.py  create_pilot_manifests.py  (+55 more)
(+857 files in other folders)
